update client and server

--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/church-icon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grace Community Church - Welcome Home</title>
-    <meta name="description" content="Join our loving community at Grace Community Church. Experience faith, fellowship, and spiritual growth together." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <title>Grace Community Church</title>
+    <meta name="description" content="Join our welcoming community where faith, hope, and love come together. Worship services, events, and fellowship for all ages." />
+    
+    <!-- Open Graph tags -->
+    <meta property="og:title" content="Grace Community Church" />
+    <meta property="og:description" content="A welcoming community where faith, hope, and love come together. Join us in worship, fellowship, and service." />
+    <meta property="og:type" content="website" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
