--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
@@ -7,7 +7,7 @@
     <meta name="description" content="Join our welcoming community where faith, hope, and love come together. Worship services, events, and fellowship for all ages." />
     
     <!-- Open Graph tags -->
-    <meta property="og:title" content="Grace Community Church" />
+    <meta property="og:title" content="AIPCA St.Elias Kanthungu Church" />
     <meta property="og:description" content="A welcoming community where faith, hope, and love come together. Join us in worship, fellowship, and service." />
     <meta property="og:type" content="website" />
     
@@ -17,7 +17,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-zinc-50 dark:bg-zinc-900"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
